- fixed bug - no clickable button on mobile (section OurRange, page services)

--- a/src/components/pages/services/OurRangeSection/styles.module.scss
+++ b/src/components/pages/services/OurRangeSection/styles.module.scss
@@ -212,6 +212,7 @@
   width: 331px;
   height: 221px;
   overflow: hidden;
+  pointer-events: none;
 
   opacity: 0;
 
